--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: white;
+    background-color: aliceblue;
     width: 100%;
     position: absolute;
 }
@@ -15,7 +15,7 @@
     left: 50%;
     transform: translate(-50%, 0);
     color: #fff;
-    text-shadow: 0 0 5px #008839, 0 0 10px #009c41;
+    text-shadow: 0 0 5px #000000, 0 0 10px #000000;
     /* -webkit-text-stroke-width: .2px;
     -webkit-text-stroke-color: black; */
 }
@@ -30,6 +30,20 @@
     transition: all 0.3s ease-in-out;
 }
 .header-top-bottom a:hover {
+    border-radius: 20px;
+}
+.header-top-bottom button {
+    text-decoration: none;
+    margin: 0px 10px;
+    font-size: 15px;
+    padding: 10px 10px;
+    border-radius: 5px;
+    color: black;
+    background-color: rgb(251, 81, 81);
+    border: 2px solid black;
+    transition: all 0.3s ease-in-out;
+}
+.header-top-bottom button:hover {
     border-radius: 20px;
 }
 .header-logo {
@@ -60,8 +74,95 @@ hr {
 }
 .sticky-header {
     position: fixed;
-    background-color: #80ff72;
+    background-color: aliceblue;
     top: 0;
     z-index: 9;
     box-shadow: 0 2px 24px 0 rgb(0 0 0 / 80%);
 }
+
+
+.header-logo-mobile {
+    display: none;
+    position: absolute;
+    left: 0px;
+    width: 60px;
+}
+.header-menu {
+    display: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+}
+.header-mobile {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    z-index: 999;
+    background-color: white;
+    height: 100vh;
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.header-mobile a {
+    margin: 10px 0px;
+    font-size: 25px;
+    text-decoration: none;
+    color: black;
+}
+.header-mobile-btn {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 40px;
+}
+.header-mobile-btn a {
+    text-decoration: none;
+    text-align: center;
+    margin: 5px 6px;
+    padding: 5px 10px;
+    font-size: 15px;
+    border-radius: 5px;
+    color: black;
+    background-color: #00ED64;
+    border: 2px solid black;
+    transition: all 0.3s ease-in-out;
+}
+
+@media only screen and (max-width: 800px) {
+    .top {
+        padding: 50px;
+    }
+    .header-top h1{
+        display: none;
+    }
+    .header-top-bottom a {
+        padding: 5px 10px;
+    }
+    .header-top {
+        display: none;
+    }
+    hr {
+        display: none;
+    }
+    .header-bottom {
+        width: 100%;
+        position: fixed;
+        z-index: 999;
+    }
+    .header-top h1{
+        display: block;
+    }
+    .header-navlinks {
+        display: none;
+    }
+    .header-menu {
+        display: block;
+    }
+    .header-logo-mobile {
+        display: block;
+    }
+}
+
