--- a/frontend/src/components/login/login.css
+++ b/frontend/src/components/login/login.css
@@ -27,7 +27,7 @@
     margin-top: 20px;
     padding: 20px 30px;
     border-radius: 20px;
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(11, 11, 11, 0.5);
     backdrop-filter: blur(8px);
 }
 .login-form div {
@@ -98,4 +98,16 @@
     100%   { 
         transform: translate(0, -0px); 
     } 
+}
+@media only screen and (max-width: 500px) {
+    .login-container {
+        width: 90%;
+        margin: 0px;
+    }
+    .login-form {
+        width: 90%;
+    }
+    .login-form div input {
+        width: 100%;
+    }
 }
