--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -20,6 +20,7 @@
 .donation-container {
     position: fixed;
     top: 0px;
+    z-index: 99;
     width: 100%;
     height: 100vh;
     display: none;
