--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -13,7 +13,7 @@
     margin-top: -30px;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
@@ -67,13 +67,17 @@
 .footer-container div {
     text-align: center;
 }
+.footer-container div h1 {
+    font-weight: 400;
+    margin-bottom: 10px;
+}
 .footer-copyright {
     text-align: center;
     position: absolute;
     margin-top: 190px;
 }
 .donate-btn {
-    margin-top: 5px;
+    margin-top: 10px;
     padding: 5px 10px;
     font-size: 15px;
     background-color: rgb(110, 110, 110);
